2014-12-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/pic14/gen.c (aopOp): fix typo in previous commit

2014-12-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/stm8/gen.c (aopOp),
	* src/z80/gen.c (aopOp),
	* src/hc08/gen.c (aopOp),
	* src/mcs51/gen.c (aopOp),
	* src/ds390/gen.c (aopOp),
	* src/pic16/gen.c (pic16_aopOp),
	* src/pic14/gen.c (aopOp): only use spill location if isspilt set

2014-12-22 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Cleanup manual.

2014-12-22 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/longlong.c:
	  Modify test cases for large signed / unsigned long long.

2014-12-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/pic14/main.c,
	  src/pic16/main.c,
	  doc/sdccman.lyx,
	  .version:
	  Remove obsolete feature macros.

2014-12-21 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Make AST dump more clear.
	* src/SDCCval.c:
	* src/SDCCval.h:
	* src/SDCCicode.c:
	* src/SDCCcse.c:
	* src/SDCCast.c:
	* src/SDCCglue.c:
	* src/pic16/SDCCglue.c:
	  make valFromLiteral() more accurate by a new unsigned long long parameter.
	* support/regression/tests/longlong.c:
	  Add new test cases for large unsigned long long.

2014-12-19 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/longlong.c:
	  Enable more test cases.
	* src/SDCCast.c:
	* src/SDCCicode.c:
	  Fix a bug: higher 4 bytes of a longlong literal are missing while dumping.
	* src/SDCCval.c:
	  Fix a bug: higher 4 bytes of a longlong value are discarded while casting from a double value.

2014-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  doc/Makefile.in:
	  Remove dependency on pdfopt.
	* support/regression/tests/bug-2313.c:
	  Regression test for bug #2313.

2014-12-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/libc/string/strncpy.c,
	  support/regression/tests/bug-2231.c:
	  Fix strncpy() in pic16. Patch by Diego Herranz.
