@@ -1,3 +1,9 @@
+2014-12-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc,
+	  support/regression/tests/bug-2320.c:
+	  Fixed bug #2320.
+
 2014-12-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/pic14/gen.c (aopOp): fix typo in previous commit
